--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div id="topbar" class="topbar">
             <div class="container-fluid ">
                 <div class="row bg-danger">
-                    <div class="col d-flex justify-content-center align-items-center">
+                    <div class="col d-flex justify-content-center align-items-center text-center">
                         <h5 class="mr-5 text-white">Surprice Sale</h5>
                         <p class="text-white mt-3">HyperX Accessories Up to 50% Off</p>
             
